fix text wrap issues with scores

--- a/widget.css
+++ b/widget.css
@@ -76,7 +76,7 @@
     display: inline-block;
 }
 #mcosu-widget .score .beatmap-details .beatmap {
-    display: inline-block;
+    display: inline;
 }
 #mcosu-widget .score .beatmap-details .speed-multiplier {
     display: inline-block;
